fix(aot): (AOT.4)(b) build the native image from the server dispatcher
`nativeImageMainClass` was `…compiler.MainKt`, so the GraalVM image — the one
artifact whose KDoc says it exists to BE the thin client of a warm server ("a
native start costs milliseconds") — was the one artifact that could not reach
`--serve` or `--daemon`. Owner-approved 2026-08-06 (relayed via the
orchestrating session; every other build.gradle.kts change stays Guardrails-gated).

Measured on the stale 2026-07-30 binary rather than argued from source:
`xtsc --serve --socket /tmp/x.sock` bound NO socket, silently took the socket
path as the PROJECT, compiled 174 files, EMITTED 173 output files and exited 0.
`--daemon` identically. So the gap was not "a mode is unreachable" but a silent
wrong success that also writes to disk.

The dispatcher's `main` is a strict superset (`--serve`, `--daemon`, else
`com.xemantic.typescript.compiler.main(args)` verbatim), so every existing
invocation is unchanged.

What was READ rather than guessed: `inputs.property("mainClass", …)` is already
declared, so the swap is a real input change and Gradle rebuilds; the
`native-image` call passes only -cp/-o/--no-fallback/-J-Xmx (no -H:, no
--initialize-at-build-time), so nothing else in the task is entry-point-coupled.
The one closed-world risk settleable without a build was settled: `javap -c
CompileServer` shows all four kotlinx-serialization resolutions are the
compiler-plugin intrinsic (`invokevirtual …$Companion.serializer()`), no
reflective `serializer(KType)` — and serialization was already reachable from
the old entry point via TsConfigLoader.

STILL UNVERIFIED, deliberately not papered over: GraalVM is not installed on
this box, so `./gradlew nativeImage` has never run against the dispatcher and
`--serve` has never run on a native image at all; whether native-image needs
metadata for UnixDomainSocketAddress / ServerSocketChannel(UNIX) is unknown and
none was invented; image size, build time and the quoted 13,3